--- a/index.html
+++ b/index.html
@@ -481,13 +481,13 @@
                 />
                 <source 
                 media="(max-width: 1187px) and (min-width: 768px)"
-                srcset="./images/tab-screen@1x.jpg 1x, ./images/tab-screen@2x.jpg 2x"
+                srcset="./images/tab-screen@1x.jpg 1x, ./images/tab-screen@2x.jpg 2x" 
                 />
                 <img 
                 class="sec-four-img" 
                 src="./images/mob-screen@1x.jpg"
-                srcset="./images/mob-screen@1x-min.jpg 1x, ./images/mob-screen@2x-min.jpg 2x" 
-                alt="Screen Illustrations picture" 
+                srcset="./images/mob-screen@1x.jpg.jpg 1x, ./images/mob-screen@2x.jpg 2x" 
+                alt="Screen Illustrations" 
                 />
               </picture>
               <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -507,14 +507,18 @@
                 srcset="./images/courses@x1-min.jpg 1x, ./images/courses.jpg 2x" 
                 />
                 <source 
+                media="(min-width: 1188px)" 
+                srcset="./images/courses@x1.jpg 1x, ./images/courses@x1.jpg 2x"
+                />
+                <source 
                 media="(max-width: 1187px) and (min-width: 768px)"
-                srcset="./images/tab-courses@1x-min.jpg 1x, ./images/tab-courses@2x-min.jpg 2x" 
-                  />
+                srcset="./images/tab-courses@1x.jpg 1x, ./images/tab-courses@2x.jpg 2x" 
+                />
                 <img 
                 class="sec-four-img" 
                 src="./images/mob-courses@1x.jpg"
-                srcset="./images/mob-courses@1x-min.jpg 1x, ./images/mob-courses@2x-min.jpg 2x" 
-                alt="Online Courses picture" 
+                srcset="./images/mob-courses@1x.jpg.jpg 1x, ./images/mob-courses@2x.jpg 2x" 
+                alt="Online Courses" 
                 />
               </picture>
               <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
