--- a/index.html
+++ b/index.html
@@ -449,16 +449,16 @@
               <picture>
                 <source 
                 media="(min-width: 1188px)" 
-                srcset="./images/taxi@x1.jpg 1x, ./images/taxi@x1.jpg 2x"
+                srcset="./images/taxi@x1.jpg 1x, ./images/taxi.jpg 2x,"
                 />
                 <source 
                 media="(max-width: 1187px) and (min-width: 768px)"
-                srcset="./images/tab-taxi@1x.jpg 1x, ./images/tab-taxi@2x.jpg 2x" 
+                src="./images/tab-taxi@1x.jpg 1x, ./images/tab-taxi@2x.jpg 2x"
                 />
                 <img 
                 class="sec-four-img" 
                 src="./images/mob-taxi@1x.jpg"
-                srcset="./images/mob-taxi@1x.jpg.jpg 1x, ./images/mob-taxi@2x.jpg 2x" 
+                srcset="./images/mob-taxi@1x.jpg 1x, ./images/mob-taxi@2x.jpg 2x" 
                 alt="Taxi Service picture" 
                 />
               </picture>
